initial commit for korone

--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
     <meta name="theme-color" content="#728bf3">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="Description" content="Peko按钮 ぺこらボタン PEKO BUTTON">
-    <meta name="Keywords" content="Peko按钮,ぺこらボタン,PEKO BUTTON" />
+    <meta name="Description" content="狗按钮 ころねボタン KORONE BUTTON">
+    <meta name="Keywords" content="狗按钮,ころねボタン,KORONE BUTTON" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>pekobutton</title>
+    <title>ころねボタン　KORONE BUTTON</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
