--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,18 @@
     <meta name="Keywords" content="狗按钮,ころねボタン,KORONE BUTTON" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>ころねボタン　KORONE BUTTON</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
+    <link rel="stylesheet" href="https://fonts.loli.net/css?family=Noto Sans SC:100,300,400,500,700,900&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-103626808-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-103626808-6');
+    </script>
+
 </head>
 
 <body>
