--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="#728bf3">
     <meta charset="utf-8">
-    <meta name="theme-color" content="#728bf3">
+    <meta name="theme-color" content="#F2C48D">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="Description" content="狗按钮 ころねボタン KORONE BUTTON">
